Moved body down 55px. This fixed some clipping with the navbar.

--- a/website/themes/convocation/static/css/custom.css
+++ b/website/themes/convocation/static/css/custom.css
@@ -65,6 +65,14 @@ footer ul {
 /* --FOOTER END-- */
 
 /*-------------------------------------------------------------------------------------------*/
+/* 6. Site Structure & Appearance */
+/*-------------------------------------------------------------------------------------------*/
+
+body {
+    padding-top:55px;
+}
+
+/*-------------------------------------------------------------------------------------------*/
 /* 7. Responsive Media Queries */
 /*-------------------------------------------------------------------------------------------*/
 @media only screen and (min-width: 768px) {
